Cleanup comments & final touches